--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.82",
+        "phpunit/phpunit": "^12.2",
+        "symfony/browser-kit": "7.3.*",
+        "symfony/css-selector": "7.3.*",
         "symfony/maker-bundle": "^1.64"
     },
     "config": {
