--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ APP_SECRET=
 ###> doctrine/doctrine-bundle ###
 DATABASE_URL="postgresql://developer:password@127.0.0.1:5432/exo7?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
