--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 ###> phpunit/phpunit ###
 /phpunit.xml
 .phpunit.result.cache
+/bin/phpunit
 ###< phpunit/phpunit ###
 
 ###> friendsofphp/php-cs-fixer ###
