feat: add CRUD operations for Organization entity

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,3 +9,4 @@ services:
         resource: '../src/'
 
     App\Application\Port\IContactRepository: '@App\Infrastructure\ForProduction\Repository\ContactRepository'
+    App\Application\Port\IOrganizationRepository: '@App\Infrastructure\ForProduction\Repository\OrganizationRepository'
