--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 /public/bundles/
 /var/
 /vendor/
-!/files/*/
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
@@ -26,3 +25,4 @@
 ###> phpstan/phpstan ###
 phpstan.neon
 ###< phpstan/phpstan ###
+/files/
